k8s/easy-notes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: easy-notes
  name: easy-notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easy-notes-pod
  template:
    metadata:
      labels:
        app: easy-notes-pod
    spec:
      containers:
        - name: easy-notes
          resources:
            limits:
              memory: 128mi
              cpu: 500m
          image: scottdkey/notes:latest
          ports:
            - containerPort: 3000
      restartPolicy: Always
